only listing active tasks to cancel